// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a button with a classname 1`] = `
<div>
  <button
    className="btn"
    id="myButton"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "lightblue",
        "fontSize": "25px",
      }
    }
  >
    Open
  </button>
</div>
`;

exports[`<Button /> toggleState should be called on click 1`] = `
<div>
  <button
    className="btn"
    id="myButton"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "lightblue",
        "fontSize": "25px",
      }
    }
  >
    Close
  </button>
</div>
`;
